# QtQmlAndroidContactsApp

./: CMakeLists.txt  Main.qml  README.md  contact.cpp  contactsmodel.cpp  contactsmodel.h  main.cpp
android/: AndroidManifest.xml
android/src/com/test/: ContactsActivity.java
